# entities

./: .gitignore
entities/: Cargo.toml
entities/src/: lib.rs  user_ex.rs
entities/src/account_model/: mod.rs
entities/src/account_model/auth/: account.rs  token.rs  union.rs
entities/src/account_model/user_model/: email.rs  email_account.rs  mobile.rs  mobile_account.rs  mod.rs  org.rs  org_account.rs  profile.rs  team.rs  team_profile.rs  user.rs  user_profile.rs
entities/src/account_model/user_model/union/: app.rs  mod.rs  open.rs  tenant.rs  ticket.rs  union.rs
entities/src/address/: address.rs  city.rs  country.rs
entities/src/address_model/: address.rs  address_account.rs  city.rs  country.rs  mod.rs
entities/src/ownership/: obj.rs  owner.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  main.rs
schema/: Cargo.toml
schema/src/: lib.rs
schema/src/account_model/: mod.rs
schema/src/account_model/auth/: account.rs
schema/src/account_model/user_model/: mod.rs  user.rs  user_team.rs
schema/src/ownership/: owner_invitation.rs  owner_obj.rs
